# django-quik

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/django_quik/: __init__.py  cli.py  config.py  loader.py  tailwind.py
src/django_quik/server/: __init__.py  http.py
tests/: test_http.py
